deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mf-renap-service
  namespace: br-cajabr-renap
spec:
  type: ClusterIP
  selector:
    app: mf-renap
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
